missing files from previous commit

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,3 +29,11 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+
+<script>
+  $(document).ready(function(){
+    setInterval(function(){
+      location.reload();
+    }, 10000);
+  });
+</script>
