--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,19 +8,17 @@
       <th>Name</th>
       <th>Active</th>
       <th>Countdown</th>
-      <th colspan="3"></th>
+      <th colspan="1"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
-      <tr>
+      <tr data-user-id="<%= user.id %>">
         <td><%= user.name %></td>
-        <td><%= user.active %></td>
-        <td><%= user.countdown %></td>
-        <td><%= link_to 'Show', user %></td>
+        <td class="user-active"><%= user.active %></td>
+        <td class="user-countdown"><%= user.countdown %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,12 +26,18 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
-
 <script>
   $(document).ready(function(){
     setInterval(function(){
-      location.reload();
+      fetch('/users.json').then(function(response){
+        return response.json();
+      }).then(function(j){
+        j.forEach(function(user){
+          var $user = $('tr[data-user-id=' + user.id + ']');
+          $user.find('td[class=user-active]').text(user.active);
+          $user.find('td[class=user-countdown]').text(user.countdown);
+        });
+      });
     }, 10000);
   });
 </script>
